--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,6 +13,7 @@
             <span class="brand">Blackjack</span>
             <ul class="nav">
               <li><a href="/name_entry">New Player</a></li>
+              <li><a href="/start_over">Start Over</a></li>
             </ul>
         </div>
       </div>
