--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,8 @@
     <title>Blackjack 0.3</title>
     <link rel="stylesheet" href="/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/application.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="/application.js"></script>
   </head>
   <body style="padding-top: 50px;">
 
@@ -22,11 +24,14 @@
   <div class="container">
     <%if @error %>
       <div class="alert alert-error"><%=@error%></div>
-    <%elsif @success %>
+    <% end %>
+    <%if @success %>
       <div class="alert alert-success"><%=@success%></div>
-    <%elsif @alert %>
+    <% end %>
+    <%if @alert %>
       <div class="alert"><%=@alert%></div>
-    <% else %>
+    <% end %>
+    <% if @info %>
       <div class="alert alert-info"><%=@info%></div>
     <% end %>
       <%= yield %>
