--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,8 +14,8 @@
         <div class="container">
             <span class="brand">Blackjack</span>
             <ul class="nav">
-              <li><a href="/name_entry">New Player</a></li>
-              <li><a href="/start_over">Start Over</a></li>
+              <li><a href="/name_entry"><i class="icon-user"></i> New Player</a></li>
+              <li><a href="/start_over"><b style="color: black;">$</b> Start Over</a></li>
             </ul>
         </div>
       </div>
