--- a/views/bet.erb
+++ b/views/bet.erb
@@ -7,6 +7,11 @@
 
   <div id="slider"></div>
 
+  <div id="slider_labels">
+    <label id="min_label">0</label>
+    <label id="max_label"><%= session[:players_money] %></label>
+  </div>
+
   <script>
   var players_money= '<%= session[:players_money] %>';
   $( '#slider' ).slider({
