--- a/views/name_entry.erb
+++ b/views/name_entry.erb
@@ -2,6 +2,6 @@
   <form action="/set_name" method="post">
     Name: <input type="text" name="player_name"/>
     <br/>
-    <input type="submit" class="btn"/>
+    <input type="submit" class="btn" value="start game"/>
   </form>
 </div>
