--- a/views/name_entry.erb
+++ b/views/name_entry.erb
@@ -1,7 +1,7 @@
 <div class="well">
   <form action="/set_name" method="post">
-    Name: <input type="text" name="player_name"/>
+    <input type="text" name="player_name" autofocus=/>
     <br/>
-    <input type="submit" class="btn" value="start game"/>
+    <input type="submit" class="btn btn-info" value="Start Game"/>
   </form>
 </div>
