--- a/views/bet.erb
+++ b/views/bet.erb
@@ -2,7 +2,7 @@
   <form action="/bet" method="post">
     <input id="bet-amount" type="text" name="bet"/>
     <br/>
-    <input type="submit" class="btn btn-success" value="make bet"/>
+    <input type="submit" class="btn btn-success" value="Make Bet"/>
   </form>
 
   <div id="slider"></div>
