Updated name entry

--- a/views/name_entry.erb
+++ b/views/name_entry.erb
@@ -1,4 +1,7 @@
 <div class="well">
+  <p>
+  Name:
+  </p>
   <form action="/set_name" method="post">
     <input type="text" name="player_name" autofocus=/>
     <br/>
